<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="beer"
            type="com.example.railan.cervejas.dtos.Beer"/>
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.example.railan.cervejas.activities.BeerDetailsActivity">

        <FrameLayout
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <android.support.v7.widget.Toolbar
                android:id="@+id/mainToolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/colorPrimary"/>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="?attr/actionBarSize"
            android:orientation="vertical">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:ignore="UselessParent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical"
                    android:gravity="center">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="8dp"
                        android:maxLines="1"
                        android:text="@{beer.name}"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/textViewIdHeight"
                        app:layout_constraintTop_toBottomOf="@+id/textViewIdHeight" />


                    <ImageView
                        android:id="@+id/imageView"
                        android:layout_width="200dp"
                        android:layout_height="200sp"
                        android:src="@drawable/ic_launcher_background"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/layoutInformation"
                        app:layout_constraintHorizontal_bias="0.077"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="ContentDescription" />

                    <Button
                        android:id="@+id/favoriteButton"
                        android:layout_width="match_parent"
                        android:background="@color/colorPrimaryDark"
                        android:layout_height="45dp"
                        android:layout_marginBottom="20dp"
                        android:layout_marginEnd="40dp"
                        android:layout_marginStart="40dp"
                        android:layout_marginTop="20dp"
                        android:text="@string/favorite" />

                    <LinearLayout
                        android:id="@+id/layoutInformation"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="15dp"
                        android:layout_marginRight="15dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginBottom="10dp"
                        android:orientation="vertical"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintLeft_toRightOf="@id/imageView"
                        app:layout_constraintRight_toRightOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:targetApi="o">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/description"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:id="@+id/textViewDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@{beer.description}"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/first_brewed"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:id="@+id/textViewFirstBrew"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:text="@{beer.firstBrewed}"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/alcohol_percentage"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:id="@+id/textViewAbv"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@{beer.abv}"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:text="@string/brewer_tips"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            app:layout_constraintHorizontal_bias="0.0" />

                        <TextView
                            android:id="@+id/textViewTips"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:layout_marginBottom="10dp"
                            android:text="@{beer.brewerTips}"
                            app:layout_constraintHorizontal_bias="0.0" />

                    </LinearLayout>

                </LinearLayout>

            </ScrollView>

        </LinearLayout>

    </android.support.constraint.ConstraintLayout>
</layout>
